Interfaz login y registro implementadas

--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>Funciona</h1>
+	<h1>Pantalla de Usuario Logueado</h1>
 	<a th:href="@{/logout}">Salir</a>
 </body>
 </html>
