--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Insert title here</title>
+<meta charset="utf-8">
+<title>GG | Genuine Gamers</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+	href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+	rel="stylesheet">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<form method="post" th:action="@{/registration}">
-		<p> Nombre: <input type="text" name = "name"> </p> 
-		<p> Contraseña: <input type="password" name = "pwd"> </p> 
-		<p> Repetir contraseña: <input type="password" name = "cpwd"> </p> 
-		<p> Teléfono: <input type="number" name = "tlf"> </p> 
-		<p> Correo: <input type="text" name = "mail"> </p> 
-		<p> Fecha nacimiento: <input type="date" name = "fnac"> </p> 
-		<p> Sexo: 
-			<label> Hombre </label><input type="radio" id="sex" name = "sex" value="Hombre"> </label>
-			<label> Mujer </label><input type="radio" id="sex" name = "sex" value="Mujer"> </label>
-			<label> No Binario </label><input type="radio" id="sex" name = "sex" value="No Binario"> </label>
-		</p> 
-		<input type="submit">
+		<div class="registro-box">
+			<img src="img/logo-f.png" class="logo"> 
+			<h1>Registrese Aquí</h1>
+				<label for="user">Usuario</label> 
+					<input type="text" name="name" placeholder="Introduzca Usuario"> 
+				<label for="pwd">Contraseña</label>
+					<input type="password" name="pwd" placeholder="Introduzca Contraseña">
+				<label for="cpwd">Repetir Contraseña </label>
+					<input type="password" name="cpwd" placeholder="Vuelva a introducir la Contraseña"> 
+				<label for="tlf">Teléfono</label> 
+					<input type="text" name="tlf" placeholder="Introduzca Teléfono"> 
+				<label for="mail">E-mail</label>
+					<input type="text" name="mail" placeholder="Introduzca E-mail"> 
+				<label for="fnac">Fecha de Nacimiento</label> 
+					<input type="date" name="fnac" placeholder="Introduzca su Fecha de Nacimiento"> 
+				<label for="sex">Sexo</label> <br>
+					<div class="check"> Hombre <input type="radio" name="sex" value="h"> </div>
+					<div class="check"> Mujer&nbsp;&nbsp;&nbsp;&nbsp;<input type="radio" name="sex" value="m"> </div>
+			<input type="submit" value="Registrate"> <a href="login">Volver al Login</a>
+		</div>
 	</form>
 </body>
 </html>
