--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
 <html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-	<h1>Pantalla de Admin Logueado</h1>
-	<a th:href="@{/logout}">Salir</a>
-</body>
+	<h1>Bienvenido a la interfaz de admin</h1>
+	<a href="/login?logout">Salir</a>
 </html>
