--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,37 +1,23 @@
-<!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>GG | Genuine Gamers</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-	href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-	rel="stylesheet">
-<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-	<form th:action="@{/login}" method="post">
-		<div class="login-box">
-			<img src="img/logo-f.png" class="logo">
-			<h1>Entre Aquí</h1>
-			<label for="user">Usuario</label> 
-				<input type="text" name="user" placeholder="Introduzca Usuario"> 
-			<label for="pwd">Contraseña</label>
-				<input type="password" name="pwd" placeholder="Introduzca Contraseña"> 
-				<input type="submit" value="Log In"> <a href="registration">Todavía no tienes cuenta, <b>Unete!</b>
-			</a>
-		</div>
-	</form>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>GG | Genuine Gamers</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+  	<form id="" th:action="@{/login}">
+  		<div class="login-box">
+      		<img src="img/logo-f.png" class="logo"> 
+  	        <label for="user">Usuario</label>
+       			<input type="text" name="name" placeholder="Introduzca Usuario">
+        	<label for="pwd">Contraseña</label>
+        		<input type="password" name="pwd" placeholder="Introduzca Contraseña">
+        	<input type="submit" value="Log In">
+        	<a href="registration">Todavía no tienes cuenta, <b>Unete!</b></a>
+  		</div>
+  	</form>
+  </body>
 </html>
-
-
-
-
-
-
-
-
-
-
