--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,37 +1,78 @@
-<!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>GG | Genuine Gamers</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-	href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-	rel="stylesheet">
-<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-	<form method="post" th:action="@{/registration}">
-		<div class="registro-box">
-			<img src="img/logo-f.png" class="logo"> 
-			<h1>Registrese Aquí</h1>
-				<label for="user">Usuario</label> 
-					<input type="text" name="name" placeholder="Introduzca Usuario"> 
-				<label for="pwd">Contraseña</label>
-					<input type="password" name="pwd" placeholder="Introduzca Contraseña">
-				<label for="cpwd">Repetir Contraseña </label>
-					<input type="password" name="cpwd" placeholder="Vuelva a introducir la Contraseña"> 
-				<label for="tlf">Teléfono</label> 
-					<input type="text" name="tlf" placeholder="Introduzca Teléfono"> 
-				<label for="mail">E-mail</label>
-					<input type="text" name="mail" placeholder="Introduzca E-mail"> 
-				<label for="fnac">Fecha de Nacimiento</label> 
-					<input type="date" name="fnac" placeholder="Introduzca su Fecha de Nacimiento"> 
-				<label for="sex">Sexo</label> <br>
-					<div class="check"> Hombre <input type="radio" name="sex" value="h"> </div>
-					<div class="check"> Mujer&nbsp;&nbsp;&nbsp;&nbsp;<input type="radio" name="sex" value="m"> </div>
-			<input type="submit" value="Registrate"> <a href="login">Volver al Login</a>
-		</div>
-	</form>
-</body>
+	<head>
+		<title>GG | Genuine Gamers</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+    	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    	<script type="text/javascript" src ="js/jquery-3.6.0.min.js"></script>
+    	<link rel="stylesheet" href="css/style.css">
+	</head>
+	<body>
+		<form th:action="@{/registration}" id="addUser">
+			 <div class="registro-box">
+				 <h1>Registrese Aquí</h1>
+				 <label for="user">Usuario</label>
+         			<input type="text" id="name" placeholder="Introduzca Usuario">
+        		 <label for="pwd">Contraseña</label>
+          			<input type="password" id="pwd" placeholder="Introduzca Contraseña">
+       			 <label for="cpwd">Vuelva a introducir la contraseña</label>
+          			<input type="password" id="cpwd" placeholder="Introduzca Contraseña">
+        		<label for="tlf">Teléfono</label>
+          			<input type="text" id="tlf" placeholder="Introduzca Teléfono">
+       		 	<label for="mail">E-mail</label>
+         			<input type="text" id="mail" placeholder="Introduzca E-mail">
+        		<label for="fnac">Fecha de Nacimiento</label>
+          			<input type="date" id="fnac" placeholder="Introduzca su Fecha de Nacimiento">
+        		<label for="sex">Sexo</label>
+        		<br>
+          			<div class="check">Hombre 
+          				<input type="radio" id="sex" value="Hombre"></div>
+          			<div class="check">Mujer&nbsp;&nbsp;&nbsp;&nbsp;
+          				<input type="radio" id="sex" value="Mujer"></div>		
+          	<input type="submit" value="Registrate">
+       	 	<a href="/login">Volver al Login</a>
+        	</div>
+		</form>
+	</body>
+	<script type="text/javascript">
+	$(document).ready(function() {
+		$('#addUser').submit(function(event) {
+			event.preventDefault();
+			ajaxPost();
+		});
+
+		function ajaxPost() {
+			var name = $('name').val();
+			var pwd = $('pwd').val();
+			var cpwd = $('cpwd').val();
+			var tlf = $('tlf').val();
+			var mail = $('mail').val();
+			var fnac = $('fnac').val();
+			var sex = $('sex').val();
+			
+			$.ajax({
+				type : "POST",
+				contentType: "application/json",
+				url: "/registration",
+				dataType : "json",
+				data : {
+					name : name,
+					pwd: pwd,
+					cpwd: cpwd,
+					tlf: tlf,
+					mail: mail,
+					fnac: fnac,
+					sex: sex
+				},
+				success : function(data) {
+					$("#addUser").html("");
+				},
+
+				error : function(e) {
+					alert("Error al registrar el usuario");
+				}
+			});
+		}
+	});
+	</script>
 </html>
