--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
 <html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-	<h1>Pantalla de Usuario Logueado</h1>
-	<a th:href="@{/logout}">Salir</a>
-</body>
+	<h1>Bienvenido a la interfaz de user</h1>
 </html>
