--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-  	<form id="" th:action="@{/login}">
+  	<form th:action="@{/admin}">
   		<div class="login-box">
       		<img src="img/logo-f.png" class="logo"> 
   	        <label for="user">Usuario</label>
