--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,192 +1,312 @@
+* {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-size: 100%;
+	vertical-align: baseline;
+}
+
 body {
-  margin: 0;
-  padding: 0;
-  background-color: #607d8b;
-  background-size: cover;
-  font-family: 'Roboto', sans-serif;
-  height: 100vh;
+	margin: 0;
+	padding: 0;
+	background-color: #607d8b;
+	background-size: cover;
+	font-family: 'Roboto', sans-serif;
+	height: 100vh;
+}
+
+.barra {
+	position: absolute;
+	position: sticky;
+	top: 0px;
+	list-style-type: none;
+	margin: 0;
+	padding: 5px;
+	height: 10%;
+	overflow: hidden;
+	background-color: #005b9f;
+}
+
+.barra>li {
+	float: left;
+	background-color: #005b9f;
+}
+
+.barra>li>a {
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	background-color: #005b9f;
+}
+
+.barra>li a:hover {
+	background-color: #3C3B47;
+}
+
+#circle>#logo {
+	margin-top: 7px;
+	width: 30px;
+	height: 14px;
+	background-color: transparent;
+}
+
+#circle {
+	position: relative;
+	top: 10px;
+	background-color: white;
+	border-radius: 100px;
+	width: 30px;
+	height: 30px;
+}
+
+.barra>.img {
+	position: relative;
+	float: right;
+	margin-right: 10px;
+}
+
+#texto {
+	position: absolute;
+	float: bottom;
+	bottom: 0;
+	background-color: transparent;
+	color: white;
+	overflow: scroll;
+	height: 140px;
+	width: auto;
+}
+
+#fondo {
+	position: absolute;
+	top: 30px;
+	width: 80%;
+	height: 80%;
+}
+
+#fondo>#inicio {
+	position: absolute;
+	margin-top: 25%;
+	color: white;
+	margin-left: 40%;
+	width: 40%;
+	height: 40%;
+	text-align: center;
+	font-size: 40px;
+	height: 60%;
+}
+
+.barra>.buscador {
+	float: left;
+	position: relative;
+}
+
+.buscador>#buscadorimg {
+	margin-top: 9px;
+	width: 20px;
+	height: 19px;
+	background: #2E2D3B;
+	border-radius: 5px;
+	position: relative;
+	top: 4px;
+	right: 12px;
+}
+
+.buscador>#buscar {
+	background-color: #2E2D3B;
+	border-radius: 5px;
+	color: white;
+	text-align: left;
+}
+
+.barra>.login {
+	position: relative;
+	float: right;
+	top: 20px;
 }
 
 .login-box {
-  width: 320px;
-  height: 420px;
-  background: #000;
-  color: #fff;
-  top: 50%;
-  left: 50%;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  box-sizing: border-box;
-  padding: 70px 30px;
-  border-radius: 15px;
+	width: 320px;
+	height: 420px;
+	background: #000;
+	color: #fff;
+	top: 50%;
+	left: 50%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	box-sizing: border-box;
+	padding: 70px 30px;
+	border-radius: 15px;
 }
 
 .login-box .logo {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  position: absolute;
-  top: -50px;
-  left: calc(50% - 50px);
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	position: absolute;
+	top: -50px;
+	left: calc(50% - 50px);
 }
 
 .login-box h1 {
-  margin: 0;
-  padding: 0 0 20px;
-  text-align: center;
-  font-size: 22px;
+	margin: 0;
+	padding: 0 0 20px;
+	text-align: center;
+	font-size: 22px;
 }
 
 .login-box label {
-  margin: 0;
-  padding: 0;
-  font-weight: bold;
-  display: block;
+	margin: 0;
+	padding: 0;
+	font-weight: bold;
+	display: block;
 }
 
 .login-box input {
-  width: 100%;
-  margin-bottom: 20px;
+	width: 100%;
+	margin-bottom: 20px;
 }
 
 .login-box input[type="text"], .login-box input[type="password"] {
-  border: none;
-  border-bottom: 1px solid #fff;
-  background: transparent;
-  outline: none;
-  height: 40px;
-  color: #fff;
-  font-size: 16px;
+	border: none;
+	border-bottom: 1px solid #fff;
+	background: transparent;
+	outline: none;
+	height: 40px;
+	color: #fff;
+	font-size: 16px;
 }
 
 .login-box input[type="submit"] {
-  border: none;
-  outline: none;
-  height: 40px;
-  background: #8eacbb;
-  color: #fff;
-  font-size: 18px;
-  border-radius: 20px;
+	border: none;
+	outline: none;
+	height: 40px;
+	background: #8eacbb;
+	color: #fff;
+	font-size: 18px;
+	border-radius: 20px;
 }
 
 .login-box input[type="submit"]:hover {
-  cursor: pointer;
-  background: #ffc107;
-  color: #000;
+	cursor: pointer;
+	background: #ffc107;
+	color: #000;
 }
 
 .login-box a {
-  text-decoration: none;
-  font-size: 12px;
-  line-height: 20px;
-  color: darkgrey;
+	text-decoration: none;
+	font-size: 12px;
+	line-height: 20px;
+	color: darkgrey;
 }
 
 .login-box a:hover {
-  color: #fff;
+	color: #fff;
 }
 
 .registro-box {
-  margin-top: 30%;
-  width: 40%;
-  height: 110%;
-  background: #000;
-  color: #fff;
-  left: 50%;
-  position: relative;
-  transform: translate(-50%, -50%);
-  box-sizing: border-box;
-  padding: 100px 30px;
-  border-radius: 15px;
+	top: 70%;
+	width: 40%;
+	height: 100%;
+	background: #000;
+	color: #fff;
+	left: 50%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	box-sizing: border-box;
+	padding: 70px 30px;
+	border-radius: 15px;
 }
 
 .registro-box .logo {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  position: absolute;
-  top: -50px;
-  left: calc(50% - 50px);
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	position: absolute;
+	top: -50px;
+	left: calc(50% - 50px);
 }
 
 .registro-box h1 {
-  margin: 0;
-  padding: 0 0 20px;
-  text-align: center;
-  font-size: 22px;
+	margin: 0;
+	padding: 0 0 20px;
+	text-align: center;
+	font-size: 22px;
 }
 
 .registro-box label {
-  margin: 0;
-  padding: 0;
-  font-weight: bold;
-  display: block;
+	margin: 0;
+	padding: 0;
+	font-weight: bold;
+	display: block;
 }
 
 .registro-box input {
-  width: 100%;
-  margin-bottom: 20px;
+	width: 100%;
+	margin-bottom: 20px;
 }
 
-.registro-box input[type="text"], .registro-box input[type="password"]{
-  border: none;
-  border-bottom: 1px solid #fff;
-  background: transparent;
-  outline: none;
-  height: 40px;
-  color: #fff;
-  font-size: 16px;
+.registro-box input[type="text"], .registro-box input[type="password"] {
+	border: none;
+	border-bottom: 1px solid #fff;
+	background: transparent;
+	outline: none;
+	height: 40px;
+	color: #fff;
+	font-size: 16px;
 }
 
 .registro-box input[type=date] {
-  height: 35px;
-  margin: 0 auto;
-  width: 100%;
-  font-size: 16px;
-  font-weight: bold;
-  text-transform: uppercase;
-  background-color: #8eacbb;
-  outline: none;
-  border: 0;
-  border-radius: 3px;
-  padding: 0 3px;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  color: #fff;
+	height: 35px;
+	margin: 0 auto;
+	width: 100%;
+	font-size: 16px;
+	font-weight: bold;
+	text-transform: uppercase;
+	background-color: #8eacbb;
+	outline: none;
+	border: 0;
+	border-radius: 3px;
+	padding: 0 3px;
+	margin-top: 15px;
+	margin-bottom: 15px;
+	color: #fff;
 }
 
 .registro-box input[type="submit"] {
-  border: none;
-  outline: none;
-  height: 40px;
-  background: #8eacbb;
-  color: #fff;
-  font-size: 18px;
-  border-radius: 20px;
+	border: none;
+	outline: none;
+	height: 40px;
+	background: #8eacbb;
+	color: #fff;
+	font-size: 18px;
+	border-radius: 20px;
 }
 
 .registro-box input[type="submit"]:hover {
-  cursor: pointer;
-  background: #ffc107;
-  color: #000;
+	cursor: pointer;
+	background: #ffc107;
+	color: #000;
 }
 
 .registro-box a {
-  text-decoration: none;
-  font-size: 12px;
-  line-height: 20px;
-  color: darkgrey;
+	text-decoration: none;
+	font-size: 12px;
+	line-height: 20px;
+	color: darkgrey;
 }
 
 .registro-box a:hover {
-  color: #fff;
+	color: #fff;
 }
 
-.check{
-  font-weight: bold;
-  font-size: 14px;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  margin-right: 125px;
+.check {
+	font-weight: bold;
+	font-size: 14px;
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	margin-right: 125px;
 }
