User funciona. Revisar admin

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<span>Bienvenido/a</span>
+	<span th:if="${session.user!=null}">Bienvenido/a admin</span>
 	
 	<form th:action="@{/logout}" method="post">
 		<button>Salir</button>
