Login user/admin funciona. Arreglar date fecha nacimiento

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,7 +60,7 @@
 		del que no se puede imaginar uno más grande tiene un Apéndice
 		Tallarinesco y existe<br> Conclusión 4: por lo tanto, el Monstruo
 		del Espagueti Volador existe.<br> Conclusión 5: por lo tanto, el
-		Monstruo del Espagueti Volador es todopoderoso.
+		Monstruo del Espagueti Volador es todopoderoso.>
 		</p>
 	</div>
 </body>
