--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -11,7 +11,7 @@
 <body>
 	<form method="POST" th:action="@{/auth/login-post}">
 		<div class="login-box">
-			<img src="../img/logo-f.png" class="logo">
+			<img src="../img/logo.png" class="logo">
 			<h1>Entre Aquí</h1>	
 			<label for="user">Usuario</label> 
 				<input type="text" name="username" placeholder="Introduzca Usuario"> 
