--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -1,25 +1,75 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
-    <title>GG | Genuine Gamers</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+	<title>GG | Genuine Gamers</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+	<link rel="stylesheet" href="../css/style-log.css">
+	<script type="text/javascript">
+		var comUser = false;
+		var comPwd = false;
+		function valuser() {
+			var user = document.getElementById('user').value;
+			var userER = /^([a-zA-Z]|[0-9]){6,50}/;
+			if (userER.test(user)) {
+				document.getElementById('user').style.color = "white";
+			}
+			else {
+				document.getElementById('user').style.color = "red";
+				document.getElementById('caja_error').hidden = false;
+			}
+		}
+		function valpwd() {
+			var pwd = document.getElementById('pwd').value;
+			var pwdER = /^^(?=.*\d)(?=.*[\u0021-\u002b\u003c-\u0040])(?=.*[A-Z])(?=.*[a-z])\S{6,14}$/;
+			if (pwdER.test(pwd)) {
+				document.getElementById('pwd').style.color = "white";
+				comPwd = true;
+			}
+			else {
+				document.getElementById('pwd').style.color = "red";
+				document.getElementById('caja_error').hidden = false;
+			}
+		}
+		function valf() {
+			if ((comUser == true) && (comPwd == true)) {
+				document.loginform.submit();
+			}
+			else {
+				document.getElementById('caja_error').hidden = false;
+			}
+		}      
+	</script>
 </head>
+
 <body>
-	<form method="POST" th:action="@{/auth/login-post}">
+	<div class="container">
 		<div class="login-box">
-			<img src="../img/logo.png" class="logo">
-			<h1>Entre Aquí</h1>	
-			<label for="user">Usuario</label> 
-				<input type="text" name="username" placeholder="Introduzca Usuario"> 
-			<label for="pwd">Contraseña</label>
-				<input type="password" name="password" placeholder="Introduzca Contraseña">
-			<input type="submit" value="Log In"> 
-			<a th:href="@{/auth/register}">Todavía no tienes cuenta, <b>Unete!</b> </a>
+			<img src="../img/logo-f.png" class="logo">
+			<h1>Entre Aquí</h1>
+			<form method="post" name="loginform" th:action="@{/auth/login-post}">
+				<label for="user">Usuario</label>
+				<input type="text" placeholder="Introduzca Usuario" id="user" name="username" onkeyup="valuser()" required minlength="6"
+					maxlength="50">
+				<label for="pwd">Contraseña</label>
+				<input type="password" placeholder="Introduzca Contraseña" id="pwd" name="password" onkeyup="valpwd()"
+					required="valpwd()" minlength="6" maxlength="14">
+				<button id="submit" value="Log In" onclick="valf()">Log In</button>
+				<br>
+				<br>
+				<a th:href="@{/auth/register}">Todavía no tienes cuenta, <b>Unete!</b></a>
+				<br><br>
+				<div class="card alert-warning" hidden="true" id="caja_error">
+					<object type="text/html" data="interfaz_amigable.html" width="100" height="100"></object>
+
+				</div>
+			</form>
 		</div>
-	</form>
 </body>
+</div>
+
 </html>
