--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -8,125 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style-log.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+    <script type="text/javascript" src="../js/scripts.js"></script>
    <script type="text/javascript">
-        var comUser=false;
-        var comPwd=false;
-        var comCpwd=false;
-        var comTlf=false;
-        var comMail=false;
-        var comDate=false;
-        var comSex=false;
-      function valuser(){
-        var user=document.getElementById('user').value;
-        var userER=/^([a-zA-Z]|[0-9]){6,50}/;
-        if(userER.test(user)){
-        document.getElementById('user').style.color="white";
-        comUser=true;
-        }
-        else{
-        document.getElementById('user').style.color="red";
-        }
-      }
-      function valpwd(){
-        var pwd=document.getElementById('pwd').value;
-        var pwdER=/^^(?=.*\d)(?=.*[\u0021-\u002b\u003c-\u0040])(?=.*[A-Z])(?=.*[a-z])\S{6,14}$/;
-        if(pwdER.test(pwd)){
-        document.getElementById('pwd').style.color="white";
-        comPwd=true;
-        }
-        else{
-        document.getElementById('pwd').style.color="red";
-        }
-      }
-      function valcpwd(){
-        var cpwd=document.getElementById('cpwd').value;
-        var cpwdER=/^^(?=.*\d)(?=.*[\u0021-\u002b\u003c-\u0040])(?=.*[A-Z])(?=.*[a-z])\S{6,14}$/;
-        if(cpwdER.test(cpwd)){
-        document.getElementById('cpwd').style.color="white";
-        comCpwd=true;
-        valpwds();
-        }
-        else{
-        document.getElementById('cpwd').style.color="red";
-        }
-      }
-      function valpwds(){
-        var pwd=document.getElementById('pwd').value;
-        var cpwd=document.getElementById('cpwd').value;
-        if(pwd==cpwd){
-          comPwd=true;
-          comCpwd=true;
-        console.log('todo flama');
-        }
-        else{
-        alert('No coinciden las dos contraseñas. Asegurese de que es una contraseña que podrá recordar');
-        }
-      }
-      function pwdError(){
-        if ((comPwd==true)&&(comCpwd==true)) {
-          console.log("tamos bien");
-        }
-        else{
-          console.log("No se lo pongamos tan facil a los malos")
-        }
-      }
-      function valtlf(){
-        var tlf=document.getElementById('tlf').value;
-        var tlfER=/^([0-9]){9}/;
-        if(tlfER.test(tlf)){
-        document.getElementById('tlf').style.color="white";
-        comTlf=true;
-        }
-        else{
-        document.getElementById('tlf').style.color="red";
-        }
-      }
-      function valdate(){
-        var hoy = new Date();
-        var date = document.getElementById('date').value;
-        var dhoy = hoy.getDate();
-        var mhoy = hoy.getMonth();
-        var ahoy = hoy.getFullYear()-3;
-        var hoy = ahoy +"-"+mhoy+"-"+dhoy;
-        console.log(date);
-        console.log(hoy);
-        if (hoy>date) {
-          console.log("OK");
-          comDate=true;
-        }
-        else{
-          console.log("Fatal error");
-        }
-      }
-
-      function valmail(){
-        var mail=document.getElementById('mail').value;
-        var mailER=/^\w+([\.\-]?\w{0,})*@\w+(\.\w{2,4})+$/;
-        if(mailER.test(mail)){
-        document.getElementById('mail').style.color="white";
-        comMail=true;
-        }
-        else{
-        document.getElementById('mail').style.color="red";
-        }
-      }
-      function valsex(){
-        var sex= document.querySelectorAll('input[name="sex"]');
-        if (sex[0].checked == false && sex[1].checked==false) {
-            return alert("Completa el campo sexo.");
-        }
-        else{
-          comSex=true;
-        }
-      }
-      function valf(){
-        if((comUser==true)&&(comPwd==true)&&(comCpwd==true)&&(comTlf==true)&&(comMail==true)&&(comDate==true)){
-        document.registroform.submit();
-        }
-        else{
-        return false;
-        }
-      }
+        
     </script>
   </head>
   <body>
@@ -137,9 +22,9 @@
         <label for="user">Usuario</label>
          <input type="text" th:field="*{username}" placeholder="Introduzca Usuario" id="user" onkeyup="valuser()" required minlength="6" maxlength="50" value="Antonio">
         <label for="pwd">Contraseña</label>
-          <input type="password" th:field="*{pwd}" placeholder="Introduzca Contraseña" onkeyup="valpwd()" id="pwd" required minlength="6" maxlength="14" value="Antonio#123">
+          <input type="password" th:field="*{pwd}" placeholder="Introduzca Contraseña" onkeyup="valpwd()" id="pwd" required minlength="6" maxlength="14">
         <label for="cpwd">Vuelva a introducir la contraseña</label>
-          <input type="password" placeholder="Introduzca Contraseña" onchange="valcpwd()" onblur="pwdError()" id="cpwd" required minlength="6" maxlength="14" value="Antonio#123">
+          <input type="password" placeholder="Introduzca Contraseña" onchange="valcpwd()" onblur="pwdError()" id="cpwd" required minlength="6" maxlength="14" >
         <label for="tlf">Teléfono</label>
           <input type="text" th:field="*{tlf}" placeholder="Introduzca Teléfono" onkeyup="valtlf()" id="tlf" required minlength="9" maxlength="9" value="666666666">
         <label for="mail">E-mail</label>
