--- a/src/main/resources/templates/user/perfil.html
+++ b/src/main/resources/templates/user/perfil.html
@@ -13,6 +13,8 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <script type="text/javascript" src="js/scripts.js"></script>
         <link href="/css/style.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+        <script type="text/javascript" src="/js/scripts.js"></script>
     </head>
     <body>
         <!-- Navigation-->
@@ -69,7 +71,12 @@
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; GG Team 2021</p></div>
+            <div class="container">
+                <p class="m-0 text-center text-white">
+                    Copyright &copy; GG Team 2021<br>
+                    <a href="https://github.com/ProyectoReyFernando/GenuineGames" title="github" class="fab fa-github" target="_blank"></a>
+                </p>
+            </div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
