--- a/src/main/resources/templates/user/perfil.html
+++ b/src/main/resources/templates/user/perfil.html
@@ -13,6 +13,8 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <script type="text/javascript" src="js/scripts.js"></script>
         <link href="/css/style.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+        <script type="text/javascript" src="/js/scripts.js"></script>
     </head>
     <body>
         <!-- Navigation-->
@@ -49,27 +51,51 @@
         </nav>
         <!-- Section-->
         <section class="bg-dark py-perfil d-flex flex-row justify-content-center alig-items-center">
-            <div class="card col-lg-10 text-center align-items-center justify-content-center">
-                <div class="card" style="width: 18rem;">
-                    <img src="/img/perfil.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Manolito34</h5>
-                        <img src="/img/pwd.png" width="50px">
-                     </div>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">68549027</li>
-                        <li class="list-group-item">manolito34@yahoo.es</li>
-                        <li class="list-group-item">01/08/1969</li>
-                        <li class="list-group-item">Hombre</li>
-                     </ul>
-                    <div class="card-body">
-                  <a onclick="edit_perfil()" class="card-link">Editar</a>
+            <div class="container card col-lg-11 col-md-6">
+                <div class="row container">
+                     <div class="col-lg-3 col-md-6 m-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="/img/perfil.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Manolito34</h5>
+                            </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">68549027</li>
+                            <li class="list-group-item">manolito34@yahoo.es</li>
+                            <li class="list-group-item">01/08/1969</li>
+                            <li class="list-group-item">Hombre</li>
+                        </ul>
+                    </div>
+                      </div>
+                      <div class="col-lg-8 col-md-6 m-3">
+                        <h2>Interacciones</h2>
+                        <div class="card mt-2">
+                          <h5 class="card-header">Comentario</h5>
+                          <div class="card-body">
+                            <h5 class="card-title">League of Legends</h5>
+                            <p class="card-text">Es un juego en el que la gente siempre trata de ayudar, me encanta por su comunidad</p>
+                          </div>
+                        </div>
+                        <div class="card mt-2">
+                          <h5 class="card-header">Comentario</h5>
+                          <div class="card-body">
+                            <h5 class="card-title">Rocket League</h5>
+                            <p class="card-text">No me ha gustado por que askjnfcijsdnfijsdbijcdbsjaihdijsabndjbasjidnasijdn y no se puede volar. MALDITOS HACKERS DE M*****</p>
+                          </div>
+                        </div>
+
+                      </div>
                 </div>
             </div>
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; GG Team 2021</p></div>
+            <div class="container">
+                <p class="m-0 text-center text-white">
+                    Copyright &copy; GG Team 2021<br>
+                    <a href="https://github.com/ProyectoReyFernando/GenuineGames" title="github" class="fab fa-github" target="_blank"></a>
+                </p>
+            </div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
