--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -43,7 +43,7 @@
                                 <li><a class="dropdown-item" href="/user/ajustes"><img class="tab-icon icon-ajustes" src="/img/ajustes.png" > Ajustes</a></li>
                                 <li><a class="dropdown-item" href="/user/perfil"><img class="tab-icon icon-avatar" src="/img/avatar.png"> Perfil</a></li>
                                 <li><hr class="dropdown-divider"/></li>
-                                 <li><a class="dropdown-item"><img class="tab-icon icon-logout" src="/img/logout.png"><button>Logout</button></a></li>
+                                 <li><a class="dropdown-item" href="/"><img class="tab-icon icon-logout" src="/img/logout.png">Logout</a></li>
                             </ul>
                         </li>
                     </form>
