--- a/src/main/resources/templates/_t/head.html
+++ b/src/main/resources/templates/_t/head.html
@@ -13,5 +13,6 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="/css/style.css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+        <script type="text/javascript" src="/js/jquery.js"></script>
         <script type="text/javascript" src="/js/scripts.js"></script>
     </head>
