Union para proyecto

--- a/src/main/resources/templates/_t/body.html
+++ b/src/main/resources/templates/_t/body.html
@@ -5,7 +5,7 @@
 						<td th:text="${game.name}" id="namejuego"th:value="${game.name}"></td>
 						<td th:text="${game.category}" id="catjuego"th:value="${game.category}"></td>
 						<td th:text="${game.description}" id="descjuego"th:value="${game.description}"></td>
-						<td th:text="${game.img}" id="imgjuego"th:value="${game.id}"></td>
+						<td th:text="${game.img}" id="imgjuego"th:value="${game.img}"></td>
 					</tr>
 				</tbody>
 			</table>
