--- a/src/main/resources/templates/_t/nav.html
+++ b/src/main/resources/templates/_t/nav.html
@@ -1,79 +1,96 @@
 <body>
-    <div th:if="${session.user.role?.name == 'ADMIN'}">
-    <!--******ADMIN******-->
-    	<!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href=""><img src="/img/logo.png"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Inicio</a></li>
+	<div th:if="${session.user.role?.name == 'ADMIN'}">
+		<!--******ADMIN******-->
+		<!-- Navigation-->
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container px-4 px-lg-5">
+				<a class="navbar-brand" href=""><img src="/img/logo.png"></a>
+				<button class="navbar-toggler" type="button"
+					data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent" aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="#!">Inicio</a></li>
 
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorías</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">MOBA</a></li>
-                                <li><a class="dropdown-item" href="#!">Carreras</a></li>
-                                <li><a class="dropdown-item" href="#!">Shooters</a></li>
-                            </ul>
-                        </li>
-                       <li class="nav-item"><a class="nav-link" href="/user/admin/getAllGame">Listado Juegos</a></li>
-                        <!--Panel del ADMIN-->
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Admin Panel</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item text-center" onclick="adminC()"><img src="/img/create.png" class="admin-btn"> Crear</a></li>
-                                <li><a class="dropdown-item text-center" onclick="adminU()"><img src="/img/update.png" class="admin-btn"> Editar</a></li>
-                                <li><a class="dropdown-item text-center" onclick="adminD()"><img src="/img/delete.png" class="admin-btn"> Borrar</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form class="d-flex" method="post" th:action="@{/logout}">
-                            <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="/img/perfil.png" class="perfil"></a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="/user/ajustes"><img class="tab-icon icon-ajustes" src="/img/ajustes.png" > Ajustes</a></li>
-                                <li><a class="dropdown-item" href="/user/perfil"><img class="tab-icon icon-avatar" src="/img/avatar.png"> Perfil</a></li>
-                                <li><hr class="dropdown-divider"/></li>
-                                <li><a class="dropdown-item" href="/"><img class="tab-icon icon-logout" src="/img/logout.png">Logout</a></li>
-                            </ul>
-                        </li>
-                    </form>
-                </div>
-            </div>
-        </nav>
-        </div>
-  <div th:unless="${session.user.role?.name == 'ADMIN'}">
-    <!--******USER******-->
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href=""><img src="/img/logo.png"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Inicio</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorías</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">MOBA</a></li>
-                                <li><a class="dropdown-item" href="#!">Carreras</a></li>
-                                <li><a class="dropdown-item" href="#!">Shooters</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form class="d-flex" method="post" th:action="@{/logout}">
-                            <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="/img/perfil.png" class="perfil"></a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="/user/ajustes"><img class="tab-icon icon-ajustes" src="/img/ajustes.png" > Ajustes</a></li>
-                                <li><a class="dropdown-item" href="/user/perfil"><img class="tab-icon icon-avatar" src="/img/avatar.png"> Perfil</a></li>
-                                <li><hr class="dropdown-divider"/></li>
-                                 <li><a class="dropdown-item" href="/"><img class="tab-icon icon-logout" src="/img/logout.png">Logout</a></li>
-                            </ul>
-                        </li>
-                    </form>
-                </div>
-            </div>
-        </nav>
+						<li class="nav-item dropdown"><a
+							class="nav-link dropdown-toggle" id="navbarDropdown" href="#"
+							role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorías</a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<li><a class="dropdown-item" href="#!">MOBA</a></li>
+								<li><a class="dropdown-item" href="#!">Carreras</a></li>
+								<li><a class="dropdown-item" href="#!">Shooters</a></li>
+							</ul></li>
+						<li class="nav-item"><a class="nav-link"
+							href="/user/admin/getAllGame">Listado Juegos</a></li>
+					</ul>
+					<form class="d-flex" method="post" th:action="@{/logout}">
+						<li class="nav-item dropdown"><a
+							class="nav-link dropdown-toggle" id="navbarDropdown" href="#"
+							role="button" data-bs-toggle="dropdown" aria-expanded="false"><img
+								src="/img/perfil.png" class="perfil"></a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<li><a class="dropdown-item" href="/user/ajustes"><img
+										class="tab-icon icon-ajustes" src="/img/ajustes.png">
+										Ajustes</a></li>
+								<li><a class="dropdown-item" href="/user/perfil"><img
+										class="tab-icon icon-avatar" src="/img/avatar.png">
+										Perfil</a></li>
+								<li><hr class="dropdown-divider" /></li>
+								<li><a class="dropdown-item" href="/logout"><img
+										class="tab-icon icon-logout" src="/img/logout.png">Logout</a></li>
+							</ul></li>
+					</form>
+				</div>
+			</div>
+		</nav>
+	</div>
+	<div th:unless="${session.user.role?.name == 'ADMIN'}">
+		<!--******USER******-->
+		<!-- Navigation-->
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container px-4 px-lg-5">
+				<a class="navbar-brand" href=""><img src="/img/logo.png"></a>
+				<button class="navbar-toggler" type="button"
+					data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent" aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="#!">Inicio</a></li>
+						<li class="nav-item dropdown"><a
+							class="nav-link dropdown-toggle" id="navbarDropdown" href="#"
+							role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorías</a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<li><a class="dropdown-item" href="#!">MOBA</a></li>
+								<li><a class="dropdown-item" href="#!">Carreras</a></li>
+								<li><a class="dropdown-item" href="#!">Shooters</a></li>
+							</ul></li>
+					</ul>
+					<form class="d-flex" method="post" th:action="@{/logout}">
+						<li class="nav-item dropdown"><a
+							class="nav-link dropdown-toggle" id="navbarDropdown" href="#"
+							role="button" data-bs-toggle="dropdown" aria-expanded="false"><img
+								src="/img/perfil.png" class="perfil"></a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<li><a class="dropdown-item" href="/user/ajustes"><img
+										class="tab-icon icon-ajustes" src="/img/ajustes.png">
+										Ajustes</a></li>
+								<li><a class="dropdown-item" href="/user/perfil"><img
+										class="tab-icon icon-avatar" src="/img/avatar.png">
+										Perfil</a></li>
+								<li><hr class="dropdown-divider" /></li>
+								<li><a class="dropdown-item" href="/logout"><img
+										class="tab-icon icon-logout" src="/img/logout.png">Logout</a></li>
+							</ul></li>
+					</form>
+				</div>
+			</div>
+		</nav>
+	</div>
