--- a/src/main/resources/templates/_t/nav.html
+++ b/src/main/resources/templates/_t/nav.html
@@ -36,7 +36,7 @@
                                 <li><a class="dropdown-item" href="/user/ajustes"><img class="tab-icon icon-ajustes" src="/img/ajustes.png" > Ajustes</a></li>
                                 <li><a class="dropdown-item" href="/user/perfil"><img class="tab-icon icon-avatar" src="/img/avatar.png"> Perfil</a></li>
                                 <li><hr class="dropdown-divider"/></li>
-                                <li><a class="dropdown-item" href="/"><img class="tab-icon icon-logout" src="/img/logout.png">Logout</a></li>
+                                <li><a class="dropdown-item" href="/logout"><img class="tab-icon icon-logout" src="/img/logout.png">Logout</a></li>
                             </ul>
                         </li>
                     </form>
@@ -54,7 +54,6 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/user/chat">Chat</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorías</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -71,10 +70,11 @@
                                 <li><a class="dropdown-item" href="/user/ajustes"><img class="tab-icon icon-ajustes" src="/img/ajustes.png" > Ajustes</a></li>
                                 <li><a class="dropdown-item" href="/user/perfil"><img class="tab-icon icon-avatar" src="/img/avatar.png"> Perfil</a></li>
                                 <li><hr class="dropdown-divider"/></li>
-                                 <li><a class="dropdown-item" href="/"><img class="tab-icon icon-logout" src="/img/logout.png">Logout</a></li>
+                                 <li><a class="dropdown-item" href="/logout"><img class="tab-icon icon-logout" src="/img/logout.png">Logout</a></li>
                             </ul>
                         </li>
                     </form>
                 </div>
             </div>
         </nav>
+	</div>
