--- a/src/main/resources/templates/user/perfil.html
+++ b/src/main/resources/templates/user/perfil.html
@@ -1,105 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>GG - Genuine Gamers</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="/img/logo.png" />
-        <!-- Bootstrap icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <script type="text/javascript" src="js/scripts.js"></script>
-        <link href="/css/style.css" rel="stylesheet" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
-        <script type="text/javascript" src="/js/scripts.js"></script>
-    </head>
-    <body>
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="/user/index"><img src="/img/logo.png"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Contacto</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorías</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">MOBA</a></li>
-                                <li><a class="dropdown-item" href="#!">Carreras</a></li>
-                                <li><a class="dropdown-item" href="#!">Shooters</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form class="d-flex">
-                            <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="/img/perfil.png" class="perfil"></a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="ajustes.html"><img class="tab-icon icon-ajustes" src="/img/ajustes.png" > Ajustes</a></li>
-                                <li><a class="dropdown-item" href="#!"><img class="tab-icon icon-avatar" src="/img/avatar.png"> Perfil</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!"><img class="tab-icon icon-logout" src="/img/logout.png"> Logout</a></li>
-                            </ul>
-                        </li>
-                    </form>
-                </div>
-            </div>
-        </nav>
-        <!-- Section-->
-        <section class="bg-dark py-perfil d-flex flex-row justify-content-center alig-items-center">
-            <div class="container card col-lg-11 col-md-6">
-                <div class="row container">
-                     <div class="col-lg-3 col-md-6 m-3">
-                        <div class="card" style="width: 18rem;">
-                            <img src="/img/perfil.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Manolito34</h5>
-                            </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">68549027</li>
-                            <li class="list-group-item">manolito34@yahoo.es</li>
-                            <li class="list-group-item">01/08/1969</li>
-                            <li class="list-group-item">Hombre</li>
-                        </ul>
-                    </div>
-                      </div>
-                      <div class="col-lg-8 col-md-6 m-3">
-                        <h2>Interacciones</h2>
-                        <div class="card mt-2">
-                          <h5 class="card-header">Comentario</h5>
-                          <div class="card-body">
-                            <h5 class="card-title">League of Legends</h5>
-                            <p class="card-text">Es un juego en el que la gente siempre trata de ayudar, me encanta por su comunidad</p>
-                          </div>
-                        </div>
-                        <div class="card mt-2">
-                          <h5 class="card-header">Comentario</h5>
-                          <div class="card-body">
-                            <h5 class="card-title">Rocket League</h5>
-                            <p class="card-text">No me ha gustado por que askjnfcijsdnfijsdbijcdbsjaihdijsabndjbasjidnasijdn y no se puede volar. MALDITOS HACKERS DE M*****</p>
-                          </div>
-                        </div>
+<head>
+<meta charset="utf-8" />
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<meta name="description" content="" />
+<meta name="author" content="" />
+<title>GG - Genuine Gamers</title>
+<!-- Favicon-->
+<link rel="icon" type="image/x-icon" href="/img/logo.png" />
+<!-- Bootstrap icons-->
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+	rel="stylesheet" />
+<!-- Core theme CSS (includes Bootstrap)-->
+<script type="text/javascript" src="js/scripts.js"></script>
+<link href="/css/style.css" rel="stylesheet" />
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+<script type="text/javascript" src="/js/scripts.js"></script>
+</head>
+<body>
+	<!-- Navigation-->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<div class="container px-4 px-lg-5">
+			<a class="navbar-brand" href="/user/index"><img
+				src="/img/logo.png"></a>
+			<button class="navbar-toggler" type="button"
+				data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+					<li class="nav-item"><a class="nav-link active"
+						aria-current="page" href="#!">Inicio</a></li>
+					<li class="nav-item"><a class="nav-link" href="#!">Contacto</a></li>
+					<li class="nav-item dropdown"><a
+						class="nav-link dropdown-toggle" id="navbarDropdown" href="#"
+						role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorías</a>
+						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<li><a class="dropdown-item" href="#!">MOBA</a></li>
+							<li><a class="dropdown-item" href="#!">Carreras</a></li>
+							<li><a class="dropdown-item" href="#!">Shooters</a></li>
+						</ul></li>
+				</ul>
+				<table>
+					<thead>
+						<tr>
+							<th scope="col">Name</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="usuario:${user}">
+							<td th:text="${usuario.username}"></td>
+							<td th:text="${usuario.fnac}"></td>
+							<td th:text="${usuario.mail}"></td>
+						</tr>
+					</tbody>
+				</table>
+				<form class="d-flex">
+					<li class="nav-item dropdown"><a
+						class="nav-link dropdown-toggle" id="navbarDropdown" href="#"
+						role="button" data-bs-toggle="dropdown" aria-expanded="false"><img
+							src="/img/perfil.png" class="perfil"></a>
+						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<li><a class="dropdown-item" href="ajustes.html"><img
+									class="tab-icon icon-ajustes" src="/img/ajustes.png">
+									Ajustes</a></li>
+							<li><a class="dropdown-item" href="#!"><img
+									class="tab-icon icon-avatar" src="/img/avatar.png">
+									Perfil</a></li>
+							<li><hr class="dropdown-divider" /></li>
+							<li><a class="dropdown-item" href="#!"><img
+									class="tab-icon icon-logout" src="/img/logout.png">
+									Logout</a></li>
+						</ul></li>
+				</form>
+			</div>
+		</div>
+	</nav>
+	<!-- Section-->
+	<section
+		class="bg-dark py-perfil d-flex flex-row justify-content-center alig-items-center">
+		<div class="container card col-lg-11 col-md-6">
+			<div class="row container">
+				<div class="col-lg-3 col-md-6 m-3">
+					<div class="card" style="width: 18rem;">
+						<img src="/img/perfil.png" class="card-img-top" alt="...">
+						<div class="card-body">
+							<h5 class="card-title">Manolito34</h5>
+						</div>
+						<ul class="list-group list-group-flush">
+							<li class="list-group-item">68549027</li>
+							<li class="list-group-item">manolito34@yahoo.es</li>
+							<li class="list-group-item">01/08/1969</li>
+							<li class="list-group-item">Hombre</li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-lg-8 col-md-6 m-3">
+					<h2>Interacciones</h2>
+					<div class="card mt-2">
+						<h5 class="card-header">Comentario</h5>
+						<div class="card-body">
+							<h5 class="card-title">League of Legends</h5>
+							<p class="card-text">Es un juego en el que la gente siempre
+								trata de ayudar, me encanta por su comunidad</p>
+						</div>
+					</div>
+					<div class="card mt-2">
+						<h5 class="card-header">Comentario</h5>
+						<div class="card-body">
+							<h5 class="card-title">Rocket League</h5>
+							<p class="card-text">No me ha gustado por que
+								askjnfcijsdnfijsdbijcdbsjaihdijsabndjbasjidnasijdn y no se puede
+								volar. MALDITOS HACKERS DE M*****</p>
+						</div>
+					</div>
 
-                      </div>
-                </div>
-            </div>
-        </section>
-        <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container">
-                <p class="m-0 text-center text-white">
-                    Copyright &copy; GG Team 2021<br>
-                    <a href="https://github.com/ProyectoReyFernando/GenuineGames" title="github" class="fab fa-github" target="_blank"></a>
-                </p>
-            </div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Footer-->
+	<footer class="py-5 bg-dark">
+		<div class="container">
+			<p class="m-0 text-center text-white">
+				Copyright &copy; GG Team 2021<br> <a
+					href="https://github.com/ProyectoReyFernando/GenuineGames"
+					title="github" class="fab fa-github" target="_blank"></a>
+			</p>
+		</div>
+	</footer>
+	<!-- Bootstrap core JS-->
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+	<!-- Core theme JS-->
+	<script src="js/scripts.js"></script>
+</body>
 </html>
